--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
+    "motion": "^12.27.1",
     "nuqs": "^2.8.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
